# SlidePuzzle

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/parlab/example/slidepuzzle/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageProcessing.h  JNIDriver7seg.c  JNIDriverGPIO.c  JNIDriverLED.c  OpenCLDriver.c  SlidePuzzle.cl  native-lib.cpp
app/src/main/cpp/CL/: cl.h  cl_gl.h  opencl.h
app/src/main/java/parlab/example/slidepuzzle/: CameraPreview.java  JNIDriverGPIO.java  JNIListener.java  MainActivity.java  puzzleFunc.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/parlab/example/slidepuzzle/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
